hash de senha e utilização de Bean e injeçãod e dependência.